--- a/Resources/Prototypes/_NF/Recipes/Lathes/misc.yml
+++ b/Resources/Prototypes/_NF/Recipes/Lathes/misc.yml
@@ -146,3 +146,12 @@
   id: ColoredLightTubeFrostyBlueNF
   result: ColoredLightTubeFrostyBlue
   parent: NFBaseLightTubeRecipe
+
+- type: latheRecipe
+  id: JanicartFlatpack
+  result: JanicartFlatpack
+  materials:
+    Steel: 2000
+    Glass: 1000
+    Plastic: 800
+    Uranium: 250
