--- a/Resources/Prototypes/_NF/Entities/Objects/Devices/flatpacks.yml
+++ b/Resources/Prototypes/_NF/Entities/Objects/Devices/flatpacks.yml
@@ -879,6 +879,17 @@
   - type: StaticPrice
     price: 750
 
+- type: entity
+  parent: BaseNFFlatpack
+  id: JanicartFlatpack
+  name: janicart flatpack
+  description: A flatpack used for constructing a Janicart. Keys already slotted in the ignition. Mop sold separately.
+  components:
+  - type: Flatpack
+    entity: VehicleJanicartNFKey
+  - type: StaticPrice
+    price: 1500
+
 # Vendomats
 - type: entity
   parent: UniformPrinterFlatpack
