--- a/Resources/Prototypes/_NF/Research/civilianservices.yml
+++ b/Resources/Prototypes/_NF/Research/civilianservices.yml
@@ -38,3 +38,15 @@
   - ServiceSelectiveDropper
   - KitchenAssemblerMachineCircuitboard
   - ElectricRangeMachineCircuitboard
+
+- type: technology
+  id: JanicartFabrication
+  name: research-technology-janicart-fabrication
+  icon:
+    sprite: Objects/Vehicles/janicart.rsi
+    state: icon
+  discipline: CivilianServices
+  tier: 2
+  cost: 5000
+  recipeUnlocks:
+    - JanicartFlatpack
