Delete generator materials on deconstruct

--- a/Resources/Prototypes/Entities/Structures/Power/Generation/portable_generator.yml
+++ b/Resources/Prototypes/Entities/Structures/Power/Generation/portable_generator.yml
@@ -170,6 +170,7 @@
     - type: MaterialStorage
       storageLimit: 3000
       materialWhiteList: [Plasma]
+      dropOnDeconstruct: False # Frontier
     - type: PortableGenerator
       startChance: 0.8
     - type: UpgradePowerSupplier
@@ -237,6 +238,7 @@
     - type: MaterialStorage
       storageLimit: 3000
       materialWhiteList: [Uranium]
+      dropOnDeconstruct: False # Frontier
     - type: PortableGenerator
     - type: UpgradePowerSupplier
       powerSupplyMultiplier: 1.25
