--- a/Resources/Prototypes/Recipes/Lathes/medical.yml
+++ b/Resources/Prototypes/Recipes/Lathes/medical.yml
@@ -188,7 +188,7 @@
   result: Jug
   completetime: 4
   materials:
-    Plastic: 100
+    Plastic: 100 # Frontier
 
 - type: latheRecipe
   id: VehicleWheelchairFolded
