fix fuel-grade price comments

--- a/Resources/Prototypes/_NF/Reagents/Materials/fuelgrade.yml
+++ b/Resources/Prototypes/_NF/Reagents/Materials/fuelgrade.yml
@@ -3,14 +3,14 @@
   stackEntity: FuelPlasma1
   name: fuel-grade plasma
   icon: { sprite: _NF/Objects/Specific/Fuel/fuelgrade_material.rsi, state: plasma }
-  price: 0.1 # half of regular bananium
+  price: 0.1 # half of regular plasma
 
 - type: material
   id: FuelGradeUranium
   stackEntity: FuelUranium1
   name: fuel-grade uranium
   icon: { sprite: _NF/Objects/Specific/Fuel/fuelgrade_material.rsi, state: uranium }
-  price: 0.1 # half of regular bananium
+  price: 0.1 # half of regular uranium
 
 - type: material
   id: FuelGradeBananium
