Suffixes -> Prefixes. Rename research target.

--- a/Resources/Prototypes/Entities/Markers/Spawners/vehicles.yml
+++ b/Resources/Prototypes/Entities/Markers/Spawners/vehicles.yml
@@ -24,7 +24,7 @@
         state: keys
   - type: ConditionalSpawner
     prototypes:
-      - VehicleJanicartNF # Frontier
+      - NFVehicleJanicart # Frontier
 
 - type: entity
   name: ATV Spawner
