--- a/Resources/Prototypes/_NF/Catalog/Fills/Crates/service.yml
+++ b/Resources/Prototypes/_NF/Catalog/Fills/Crates/service.yml
@@ -20,5 +20,5 @@
   components:
   - type: StorageFill
     contents:
-      - id: VehicleJanicartNF # Frontier
+      - id: NFVehicleJanicart # Frontier
       - id: VehicleKeyJanicart
