--- a/Resources/Prototypes/_NF/Entities/Objects/Devices/flatpacks.yml
+++ b/Resources/Prototypes/_NF/Entities/Objects/Devices/flatpacks.yml
@@ -886,7 +886,7 @@
   description: A flatpack used for constructing a Janicart. Keys already slotted in the ignition. Mop sold separately.
   components:
   - type: Flatpack
-    entity: VehicleJanicartNFKey
+    entity: NFVehicleJanicartKey
   - type: StaticPrice
     price: 1500
 
