--- a/Resources/Prototypes/_NF/Research/civilianservices.yml
+++ b/Resources/Prototypes/_NF/Research/civilianservices.yml
@@ -40,8 +40,8 @@
   - ElectricRangeMachineCircuitboard
 
 - type: technology
-  id: JanicartFabrication
-  name: research-technology-janicart-fabrication
+  id: MobileSanitation
+  name: research-technology-mobile-sanitation
   icon:
     sprite: Objects/Vehicles/janicart.rsi
     state: icon
