--- a/Resources/migration.yml
+++ b/Resources/migration.yml
@@ -442,4 +442,4 @@ BlueprintFlare: null
 BaseAdvancedPen: Pen
 
 # 2024-12-14
-VehicleJanicart: VehicleJanicartNF
+VehicleJanicart: NFVehicleJanicart
