--- a/Resources/Prototypes/_NF/Entities/Structures/Machines/lathe.yml
+++ b/Resources/Prototypes/_NF/Entities/Structures/Machines/lathe.yml
@@ -268,6 +268,7 @@
       - SyringeBluespace
       - PlantBagOfHolding
       - PlantAnalyzer
+      - JanicartFlatpack
   - type: EmagLatheRecipes
     emagStaticRecipes:
       - NFHappyHonkNukieEmpty
