Set abstract true on cargo entry rather than delete

--- a/Resources/Prototypes/_NF/Catalog/Cargo/cargo_service.yml
+++ b/Resources/Prototypes/_NF/Catalog/Cargo/cargo_service.yml
@@ -17,3 +17,14 @@
   cost: 800
   category: cargoproduct-category-name-service
   group: market
+
+- type: cargoProduct
+  id: ServiceVehicleJanicart
+  abstract: true
+  icon:
+    sprite: Objects/Vehicles/janicart.rsi
+    state: icon
+  product: CrateVehicleJanicart
+  cost: 1500
+  category: cargoproduct-category-name-service
+  group: market
