We like contraband

--- a/Resources/Prototypes/Entities/Clothing/Shoes/base_clothingshoes.yml
+++ b/Resources/Prototypes/Entities/Clothing/Shoes/base_clothingshoes.yml
@@ -39,7 +39,7 @@
 # stuff common to all military boots
 - type: entity
   abstract: true
-  parent: [ClothingShoesBase, ClothingSlotBase]
+  parent: [ClothingShoesBase, ClothingSlotBase, BaseC1Contraband]
   id: ClothingShoesMilitaryBase
   components:
   - type: Matchbox
